# bayesian-if-agent

./: .gitignore  CLAUDE.md  README.md  SPEC.md  action_sensor.py  contradiction.py  core.py  expander.py  metareason.py  ollama_client.py  oracle.py  pyproject.toml  runner.py  sensor_model.py  setup_check.py
tests/: test_agent.py  test_contradiction.py  test_core.py  test_expander.py  test_integration.py  test_metareason.py
